--- a/shell/android/res/layout/input_fragment.xml
+++ b/shell/android/res/layout/input_fragment.xml
@@ -105,53 +105,58 @@
                 android:layout_marginTop="25dp"
                 android:gravity="center_vertical" >
 
-                <RelativeLayout
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_marginLeft="4dp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|left"
-                    android:orientation="vertical" >
-
-                    <ImageView
-                        android:id="@+id/controller_icon_a"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:layout_centerInParent="true"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/input" />
-
-                    <TextView
-                        android:id="@+id/controller_text_a"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:text="A"
-                        android:textColor="#ff0000"
-                        android:textIsSelectable="false"
-                        android:textStyle="bold" />
-                </RelativeLayout>
-
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="4dp"
                     android:layout_weight="1"
                     android:gravity="center_vertical|left"
-                    android:orientation="vertical" >
+                    android:orientation="horizontal" >
 
-                    <TextView
+                    <RelativeLayout
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_marginLeft="6dp"
+                        android:orientation="vertical" >
+
+                        <ImageView
+                            android:id="@+id/controller_icon_a"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:layout_centerInParent="true"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/input" />
+
+                        <TextView
+                            android:id="@+id/controller_text_a"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:text="A"
+                            android:textColor="#ff0000"
+                            android:textIsSelectable="false"
+                            android:textStyle="bold" />
+                    </RelativeLayout>
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="6dp"
                         android:ems="10"
-                        android:text="@string/controller_a" />
+                        android:orientation="vertical" >
 
-                    <TextView
-                        android:id="@+id/textViewDeviceDescriptorPlayer1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:text="@string/controller_none_selected" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ems="10"
+                            android:text="@string/controller_a" />
+
+                        <TextView
+                            android:id="@+id/textViewDeviceDescriptorPlayer1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ems="10"
+                            android:text="@string/controller_none_selected" />
+                    </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
@@ -181,53 +186,58 @@
                 android:layout_marginTop="25dp"
                 android:gravity="center_vertical" >
 
-                <RelativeLayout
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_marginLeft="4dp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|left"
-                    android:orientation="vertical" >
-
-                    <ImageView
-                        android:id="@+id/controller_icon_b"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:layout_centerInParent="true"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/input" />
-
-                    <TextView
-                        android:id="@+id/controller_text_b"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:text="B"
-                        android:textColor="#0000ff"
-                        android:textIsSelectable="false"
-                        android:textStyle="bold" />
-                </RelativeLayout>
-
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="4dp"
                     android:layout_weight="1"
                     android:gravity="center_vertical|left"
-                    android:orientation="vertical" >
+                    android:orientation="horizontal" >
 
-                    <TextView
+                    <RelativeLayout
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_marginLeft="6dp"
+                        android:orientation="vertical" >
+
+                        <ImageView
+                            android:id="@+id/controller_icon_b"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:layout_centerInParent="true"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/input" />
+
+                        <TextView
+                            android:id="@+id/controller_text_b"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:text="B"
+                            android:textColor="#0000ff"
+                            android:textIsSelectable="false"
+                            android:textStyle="bold" />
+                    </RelativeLayout>
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="6dp"
                         android:ems="10"
-                        android:text="@string/controller_b" />
+                        android:orientation="vertical" >
 
-                    <TextView
-                        android:id="@+id/textViewDeviceDescriptorPlayer2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:text="@string/controller_none_selected" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ems="10"
+                            android:text="@string/controller_b" />
+
+                        <TextView
+                            android:id="@+id/textViewDeviceDescriptorPlayer2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ems="10"
+                            android:text="@string/controller_none_selected" />
+                    </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
@@ -257,53 +267,58 @@
                 android:layout_marginTop="25dp"
                 android:gravity="center_vertical" >
 
-                <RelativeLayout
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_marginLeft="4dp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|left"
-                    android:orientation="vertical" >
-
-                    <ImageView
-                        android:id="@+id/controller_icon_c"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:layout_centerInParent="true"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/input" />
-
-                    <TextView
-                        android:id="@+id/controller_text_c"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:text="C"
-                        android:textColor="#ffff00"
-                        android:textIsSelectable="false"
-                        android:textStyle="bold" />
-                </RelativeLayout>
-
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="4dp"
                     android:layout_weight="1"
                     android:gravity="center_vertical|left"
-                    android:orientation="vertical" >
+                    android:orientation="horizontal" >
 
-                    <TextView
+                    <RelativeLayout
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_marginLeft="6dp"
+                        android:orientation="vertical" >
+
+                        <ImageView
+                            android:id="@+id/controller_icon_c"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:layout_centerInParent="true"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/input" />
+
+                        <TextView
+                            android:id="@+id/controller_text_c"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:text="C"
+                            android:textColor="#ffff00"
+                            android:textIsSelectable="false"
+                            android:textStyle="bold" />
+                    </RelativeLayout>
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="6dp"
                         android:ems="10"
-                        android:text="@string/controller_c" />
+                        android:orientation="vertical" >
 
-                    <TextView
-                        android:id="@+id/textViewDeviceDescriptorPlayer3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:text="@string/controller_none_selected" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ems="10"
+                            android:text="@string/controller_c" />
+
+                        <TextView
+                            android:id="@+id/textViewDeviceDescriptorPlayer3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ems="10"
+                            android:text="@string/controller_none_selected" />
+                    </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
@@ -333,53 +348,58 @@
                 android:layout_marginTop="25dp"
                 android:gravity="center_vertical" >
 
-                <RelativeLayout
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_marginLeft="4dp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|left"
-                    android:orientation="vertical" >
-
-                    <ImageView
-                        android:id="@+id/controller_icon_d"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:layout_centerInParent="true"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/input" />
-
-                    <TextView
-                        android:id="@+id/controller_text_d"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:text="D"
-                        android:textColor="#00ff00"
-                        android:textIsSelectable="false"
-                        android:textStyle="bold" />
-                </RelativeLayout>
-
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="4dp"
                     android:layout_weight="1"
                     android:gravity="center_vertical|left"
-                    android:orientation="vertical" >
+                    android:orientation="horizontal" >
 
-                    <TextView
+                    <RelativeLayout
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_marginLeft="6dp"
+                        android:orientation="vertical" >
+
+                        <ImageView
+                            android:id="@+id/controller_icon_d"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:layout_centerInParent="true"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/input" />
+
+                        <TextView
+                            android:id="@+id/controller_text_d"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:text="D"
+                            android:textColor="#00ff00"
+                            android:textIsSelectable="false"
+                            android:textStyle="bold" />
+                    </RelativeLayout>
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="6dp"
                         android:ems="10"
-                        android:text="@string/controller_d" />
+                        android:orientation="vertical" >
 
-                    <TextView
-                        android:id="@+id/textViewDeviceDescriptorPlayer4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:text="@string/controller_none_selected" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ems="10"
+                            android:text="@string/controller_d" />
+
+                        <TextView
+                            android:id="@+id/textViewDeviceDescriptorPlayer4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ems="10"
+                            android:text="@string/controller_none_selected" />
+                    </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
