--- a/shell/ios/emulator/MainStoryboard.storyboard
+++ b/shell/ios/emulator/MainStoryboard.storyboard
@@ -432,7 +432,7 @@
             <objects>
                 <viewController storyboardIdentifier="emulatorView" wantsFullScreenLayout="YES" id="WRM-pR-XCP" customClass="EmulatorViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="JQE-db-ZiC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="60 FPS" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mo4-qa-NUQ">
@@ -447,7 +447,7 @@
                                 <size key="shadowOffset" width="0.0" height="0.0"/>
                             </label>
                             <view opaque="NO" contentMode="scaleToFill" id="S6c-5v-781" userLabel="Controls Container">
-                                <rect key="frame" x="1" y="328" width="320" height="240"/>
+                                <rect key="frame" x="1" y="80" width="568" height="240"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" id="2r2-6d-4At" customClass="DirectionalControl">
@@ -459,7 +459,7 @@
                                         </connections>
                                     </view>
                                     <view contentMode="scaleToFill" id="wc7-x7-O1M" customClass="ButtonControl">
-                                        <rect key="frame" x="200" y="112" width="120" height="120"/>
+                                        <rect key="frame" x="448" y="112" width="120" height="120"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <connections>
@@ -467,7 +467,7 @@
                                         </connections>
                                     </view>
                                     <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="DAf-Ip-ZfX">
-                                        <rect key="frame" x="136" y="206" width="48" height="26"/>
+                                        <rect key="frame" x="268" y="194" width="48" height="26"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                         <state key="normal" backgroundImage="Start.png">
@@ -501,7 +501,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="11" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="YM6-fX-N4s">
-                                        <rect key="frame" x="253" y="0.0" width="67" height="44"/>
+                                        <rect key="frame" x="501" y="0.0" width="67" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                         <state key="normal" backgroundImage="RTrigger.png">
@@ -521,7 +521,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
                             <button opaque="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="VZZ-1B-BHQ">
-                                <rect key="frame" x="147" y="1" width="26" height="26"/>
+                                <rect key="frame" x="522" y="20" width="26" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <gestureRecognizers/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
@@ -540,8 +540,10 @@
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <gestureRecognizers/>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <connections>
                         <outlet property="buttonControl" destination="wc7-x7-O1M" id="DCv-Im-2AH"/>
                         <outlet property="controllerContainerView" destination="S6c-5v-781" id="PYO-ai-9Ym"/>
@@ -1208,7 +1210,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <segue destination="2a6-jc-CVw" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegue" id="dKv-qL-02E"/>
-                        <segue destination="ENP-dt-mAr" kind="custom" customClass="SWRevealViewControllerSegue" id="GUD-cD-jWj"/>
+                        <segue destination="ENP-dt-mAr" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegue" id="GUD-cD-jWj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V7a-XK-Rv3" userLabel="First Responder" sceneMemberID="firstResponder"/>
