--- a/shell/android-studio/reicast/src/main/res/values/donottranslate.xml
+++ b/shell/android-studio/reicast/src/main/res/values/donottranslate.xml
@@ -15,6 +15,7 @@
     </string-array>
 
     <string-array name="cable">
+        <item>None</item>
         <item>HDMI</item>
         <item>Component</item>
         <item>VGA</item>
@@ -40,25 +41,25 @@
 
    	<string-array name="region">
         <item>NTSC-J</item>
-        <item>NTSC-U/PAL-M/PAL-N</item>
+        <item>NTSC-U, PAL-M/N</item>
         <item>PAL-E</item>
         <item>reicast</item>
     </string-array>
 
     <string-array name="bios">
         <item>NTSC-J</item>
-        <item>NTSC-U/PAL-M/PAL-N</item>
+        <item>NTSC-U, PAL-M/N</item>
         <item>PAL-E</item>
         <item>reicast</item>
         <item>Katana</item>
     </string-array>
  
     <string-array name="broadcast">
-        <item>0 - NTSC-J</item>
-        <item>4 - NTSC-U</item>
-        <item>6 - PAL-M</item>
-        <item>7 - PAL-N</item>
-        <item>9 - PAL-E</item>
+        <item>NTSC-J</item>
+        <item>NTSC-U</item>
+        <item>PAL-M</item>
+        <item>PAL-N</item>
+        <item>PAL-E</item>
     </string-array>
 
     <string-array name="bioscode">
